--- a/monitor.html
+++ b/monitor.html
@@ -143,7 +143,7 @@
                     on-click="@.toggle('triggers.rBeep')">Beep</a></div>
             {{/with}}
         </div>
-        {{#if display.connection.status != "connected"}}
+        {{#if connection.status != "connected"}}
         <div class="row mt-5 mb-2">Target Values:</div>
         <div class="row">
             {{#each vitals, @keypath keypath}}
