--- a/monitor.html
+++ b/monitor.html
@@ -29,6 +29,11 @@
         <script id="ractive-template" type="text/ractive"> -->
         <script id="ractive-template" type="text/html">
         <!-- (but then code highlighting doesn't work...)  -->
+        {{#each sounds.breathing.files }}
+        {{#if .fileName != '""'}}
+        <audio src="./static/sounds/{{ .fileName }}" id="{{ .label }}"></audio>
+        {{/if}}
+        {{/each}}
 
         <div class="container">
             <div class="monitor-container">
@@ -165,9 +170,10 @@
                 Set Vitals
             </button>
             <div class="collapse" id="vitalControls">
+                <h5 class="text-light mt-3">Vitals</h5>
                 <div class="row">
                     {{#each vitals, @keypath keypath}}
-                    <div class="col-lg col-md-4 col-sm-6 my-1">
+                    <div class="col-xl col-md-4 col-sm-6 my-1">
                         <div class="form-floating">
                             <input class="form-control" type="number" value="{{ .target }}" min="{{ .min }}"
                                 max="{{ .max }}" id="{{ keypath }}-target" placeholder="{{ .target }}">
@@ -175,6 +181,27 @@
                         </div>
                     </div>
                     {{/each}}
+                </div>
+                <div class="row mt-3 align-items-center">
+                    <div class="my-1 col-xl-2 col-lg-3 col-sm-6">
+                        <label class="form-label text-light h5" for="breathingSounds">Breathing Sounds:</label>
+                    </div>
+                    <div class="my-1 col-xl-6 col-lg-3 col-sm-6">
+                        <select class="form-select" value="{{ sounds.breathing.selected }}" name="breathingSounds"
+                            id="breathingSounds">
+                            {{#each sounds.breathing.files}}
+                            <option>{{.label}}</option>
+                            {{/each}}
+                        </select>
+                    </div>
+                    <div class="my-1 col-xl-2 col-lg-3 col-sm-6">
+                        <label class="form-label text-light h5" for="breathingSoundProbability">Probability</label>
+                    </div>
+                    <div class="my-1 col-xl-2 col-lg-3 col-sm-6">
+                        <input class="form-range" type="range" name="breathingSoundProbability"
+                            id="breathingSoundProbability" min="0" max="1" step="0.1"
+                            value="{{ sounds.breathing.probability }}">
+                    </div>
                 </div>
             </div>
             {{/if}}
