--- a/simulator.html
+++ b/simulator.html
@@ -49,10 +49,17 @@
         </div>
         {{ elseif (connection.remotePeerId != '' && patient != {} && vitals != {}) }}
         <div class="p-2 alert alert-success row align-items-center">
-            <div class="col">
+            <div class="col-auto">
                 Connected to monitor "{{ connection.remotePeerId }}" as "{{connection.peerId}}".
             </div>
-            <div class="col text-end">
+            <div class="col">
+                <div class="form-check form-switch form-check-reverse">
+                    <input class="form-check-input" type="checkbox" role="switch" id="keepInSync"
+                        checked="{{ connection.keepInSync }}">
+                    <label class="form-check-label" for="keepInSync">Keep in sync with monitor</label>
+                </div>
+            </div>
+            <div class="col-auto text-end">
                 <button class="btn btn-outline-danger" on-click="@this.disconnectFromMonitor()">Disconnect</button>
             </div>
         </div>
@@ -97,18 +104,9 @@
         </div>
         <div class="my-3 card">
             <div class="card-header text-bg-danger">
-                <div class="row align-items-center">
-                    <div class="col h3">
-                        Vitals
-                    </div>
-                    <div class="col text-end">
-                        <div class="form-check form-switch form-check-reverse">
-                            <input class="form-check-input" type="checkbox" role="switch" id="keepInSync"
-                                checked="{{ connection.keepInSync }}">
-                            <label class="form-check-label" for="keepInSync">Keep in sync with monitor</label>
-                        </div>
-                    </div>
-                </div>
+                <h3>
+                    Vitals
+                </h3>
             </div>
             <div class="card-body">
                 <div class="row">
@@ -130,13 +128,41 @@
                     {{/each}}
                 </div>
             </div>
-            <div class="card-footer text-end">
-                <button class="btn btn-success" on-click="@this.sendVitals()" {{ connection.keepInSync ? 'disabled' : ''
-                    }}>
-                    Send Vitals
-                </button>
+        </div>
+        <div class="card">
+            <div class="card-header text-bg-primary">
+                <h3>
+                    Sounds
+                </h3>
+            </div>
+            <div class="card-body">
+                <div class="row mt-3 align-items-center">
+                    <div class="my-1 col-xl-2 col-lg-3 col-sm-6">
+                        <label class="form-label" for="breathingSounds">Breathing Sounds:</label>
+                    </div>
+                    <div class="my-1 col-xl-6 col-lg-3 col-sm-6">
+                        <select class="form-select" value="{{ sounds.breathing.selected }}" name="breathingSounds"
+                            id="breathingSounds">
+                            {{#each sounds.breathing.files}}
+                            <option>{{.label}}</option>
+                            {{/each}}
+                        </select>
+                    </div>
+                    <div class="my-1 col-xl-2 col-lg-3 col-sm-6">
+                        <label class="form-label" for="breathingSoundProbability">Probability</label>
+                    </div>
+                    <div class="my-1 col-xl-2 col-lg-3 col-sm-6">
+                        <input class="form-range" type="range" name="breathingSoundProbability"
+                            id="breathingSoundProbability" min="0" max="1" step="0.1"
+                            value="{{ sounds.breathing.probability }}">
+                    </div>
+                </div>
             </div>
         </div>
+        <button class="btn btn-success mt-3" on-click="@this.sendToMonitor()" {{ connection.keepInSync ? 'disabled' : ''
+            }}>
+            Send Data
+        </button>
         {{/if}}
         </script>
     </div>
