--- a/monitor.html
+++ b/monitor.html
@@ -72,7 +72,7 @@
                             <canvas class="buffer-canvas" id="ecgBufferCanvas" hidden></canvas>
                             <canvas class="signal-canvas" id="ecgSigCanvas"></canvas>
                         </div>
-                        <div class="col-4" on-wheel="@.add('vitals.hfEcg.target', (@event.wheelDeltaY/120))"><span>{{
+                        <div class="col-4" on-wheel="@.add('vitals.hfEcg.target', (Math.round(@event.wheelDeltaY/100)))"><span>{{
                                 display.hfEcg }}</span></div>
                     </div>
                 </div>
@@ -88,11 +88,11 @@
                             <canvas class="buffer-canvas" id="plethBufferCanvas" hidden></canvas>
                             <canvas class="signal-canvas" id="plethSigCanvas"></canvas>
                         </div>
-                        <div class="col-2" on-wheel="@.add('vitals.pleth.target', (@event.wheelDeltaY/120))">{{
+                        <div class="col-2" on-wheel="@.add('vitals.pleth.target', (Math.round(@event.wheelDeltaY/100)))">{{
                             display.pleth }}
                         </div>
-                        <div class="col-2" on-wheel="@.add('vitals.hfPleth.target', (@event.wheelDeltaY/120))">{{
-                            display.hfPleth }}</div>
+                        <div class="col-2" on-wheel="@.add('vitals.hfEcg.target', (Math.round(@event.wheelDeltaY/100)))">{{
+                            display.hfEcg }}</div>
                     </div>
                 </div>
                 <div {{ triggers.resp ? "" : "hidden" }} style-color="{{ display.colors.resp }}">
