--- a/simulator.html
+++ b/simulator.html
@@ -31,8 +31,7 @@
         <!-- (but then code highlighting doesn't work...)  -->
             {{ #if (connection.peerId === '') }}
         <div class="p-2 alert alert-warning">
-            Not (yet) recieved a Peer ID. The simulator view does not work in offline mode. Please check your
-            internet
+            Not (yet) recieved a Peer ID. The simulator view does not work in offline mode. Please check your internet
             connection.
         </div>
         {{ elseif (connection.remotePeerId === '') }}
