--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>Monitor - T-SiMoN</title>
 </head>
 
-<body style="background-color: #001632;">
+<body>
     &nbsp;
     <div id="ractive-target">
         <!-- should actually be
